--- a/css/register.css
+++ b/css/register.css
@@ -10,6 +10,7 @@
 	zoom: 1;
 }
 
+input::-ms-clear, ::-ms-reveal{display: none;}
 .header {
 	height: 110px;
 	background: url(../img/headbg.jpg) repeat-x left bottom;
@@ -87,9 +88,11 @@
 .container .form-item input {
 	font-size: 14px;
 	border: 0;
-	line-height: 52px;
+	height: 19px;
 	width: 190px;
-	margin-left: 20px;
+	padding-left: 20px;
+	padding-top: 16px;
+	padding-bottom: 11px;
 }
 .container .form-item .i-status {
 	width: 16px;
